# link_shortener

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  handlers.rs  main.rs  setup.rs
src/api/: mod.rs
src/db/: link.rs  mod.rs
tests/: test_create_links.rs
