[package]
name = "link_shortener"
version = "0.0.1"
description = "Simple URL shortener, providing some nifty features"
edition = "2021"
authors = ["tstaetter"]
rust-version = "1.72.1"
readme = "README.md"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
mongodb = { version = "2.7.0", default-features = false, features = ["bson-uuid-1", "bson-chrono-0_4", "bson-serde_with", "tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.49"
url = { version = "2.4.1", features = ["serde"]}
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = "1.32.0"
