[package]
name = "link_shortener"
version = "0.0.1"
description = "Simple URL shortener, providing some nifty features"
edition = "2021"
authors = ["tstaetter"]
rust-version = "1.73.0"
readme = "README.md"

[[bin]]
name = "service"
test = false
path = "src/main.rs"

[[bin]]
name = "setup"
test = false
path = "src/setup.rs"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["serde_json", "session", "url", "chrono"] }
serde_rusqlite = "0.33.1"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.4.1", features = ["serde"]}
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = "1.32.0"
