[package]
name = "link_shortener"
version = "0.0.1"
description = "Simple URL shortener, providing some nifty features"
edition = "2021"
authors = ["tstaetter"]
rust-version = "1.73.0"
readme = "README.md"

[dependencies]
actix-web = { version = "4"}
actix-rt = "2.9.0"
anyhow = "1.0.75"
dotenv = "0.15.0"
rand = "0.8.5"
sqlx = { version = "^0.7", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.49"
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
